--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Fat protein dose</title>
   </head>
-  <body style="background: black">
+  <body style="background: rgb(46, 46, 46)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
