--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,11 @@
 
       gtag("config", "G-1TNMD1MVJG");
     </script>
+    <script
+      data-ad-client="ca-pub-0747957976769090"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
   </head>
   <body style="background: rgb(46, 46, 46)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
